# bender-the-bot

./: .bumpversion.cfg  CITATION.cff  README.md  dspy.py  setup.cfg  tox.ini
.github/: CONTRIBUTING.md
docs/source/: cli.rst  conf.py  index.rst  installation.rst  usage.rst
src/bender/: __init__.py  __main__.py  bot2.py  cli.py  message.py  text_to_speech.py  version.py
src/bender/components/: moddspy.py
tests/: __init__.py  test_version.py
