##########################
# Setup.py Configuration #
##########################
[metadata]
name = bender
version = 0.0.1
description = Bender is the nicest bot!
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/schwallergroup/bender-the-bot
download_url = https://github.com/schwallergroup/bender-the-bot/releases
project_urls =
    Tracker = https://github.com/schwallergroup/bender-the-bot/issues
    Source = https://github.com/schwallergroup/bender-the-bot
    Documentation = https://bender.readthedocs.io

# Author information
author = Bojana Rankovic
author_email = bojana.nu@gmail.com
maintainer = Bojana Rankovic
maintainer_email = bojana.nu@gmail.com

# License Information
license = MIT
license_files =
    LICENSE

# Search tags
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Framework :: Sphinx
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Physics
    # TODO add your topics from the Trove controlled vocabulary (see https://pypi.org/classifiers)
keywords =
    snekpack
    cookiecutter
    chemistry
    ai
    ml
    deep-learning
    # TODO add your own free-text keywords

[options]
install_requires =
    tox
    # Missing itertools from the standard library you didn't know you needed
    more_itertools
    # Use progress bars excessively
    tqdm
    # Command line tools
    click
    more_click
    # TODO your requirements go here
    slack_sdk
    slack-bolt
    paper-qa

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.8

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest
    coverage
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx_automodapi
    # To include LaTeX comments easily in your docs. 
    # If you uncomment this, don't forget to do the same in docs/conf.py
    # texext


[options.entry_points]
console_scripts =
    bender = bender.cli:main


######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = bender
omit =
    tests/*
    docs/*

[coverage:paths]
source =
    src/bender
    .tox/*/lib/python*/site-packages/bender

[coverage:report]
show_missing = True
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if __name__ == "__main__":
    if TYPE_CHECKING:
    def __str__
    def __repr__

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = sphinx
strictness = short

